--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -114,11 +114,6 @@ We seek to examine Citibike trip data to extract meaningful relationships and co
 
  <h2 id="overview">overview</h2>
 
-<p><br /></p>
-  <iframe width="320" height="400" src="/assets/css/citibike/Top50Start.html"></iframe>
-  <iframe width="320" height="400" src="/assets/css/citibike/Top50Start.html"></iframe>
-
-<p><br /></p>
 
 
 
@@ -128,7 +123,22 @@ We seek to examine Citibike trip data to extract meaningful relationships and co
 
 One of the challenges of visualizing rich data is the static scale of figures. For a data set as huge as the one we are working with, there is useful information at different scales. To address this problem, we used an interactive visualization library called <a href="https://python-visualization.github.io/folium/">Folium</a>. A demo of such interactive visualization can be seen here.
 
+<ul>
+  <li>The top 50 stations for <a href="https://aminfadaei116.github.io/assets/css/citibike/StartCircle.html">starting</a> and <a href="https://aminfadaei116.github.io/assets/css/citibike/EndCircle.html">ending</a>.</li>
 
+  <p><br /></p>
+  <iframe width="320" height="400" src="/assets/css/citibike/Top50Start.html"></iframe>
+  <iframe width="320" height="400" src="/assets/css/citibike/Top50Start.html"></iframe>
+
+  <p><br /></p>
+
+
+  <li>The trend of flow for each station, shows the number of bikes that entered and left that station, color red indicates that the number of bikes left is greater than the number of bikes that have entered. Color green indicates that the number of bikes entered is greater than the number of bikes that have left. <a href="https://aminfadaei116.github.io/assets/css/citibike/MapDiff.html">[Demo link]</a>    
+  </li>
+
+
+
+</ul>
 
 <h4 id="overview">2.1 Usage Trend</h4>
 
@@ -142,11 +152,7 @@ One of the challenges of visualizing rich data is the static scale of figures. F
 
 
 
-<ul>
-  <li>The top 50 stations for <a href="https://aminfadaei116.github.io/assets/css/citibike/StartCircle.html">starting</a> and <a href="https://aminfadaei116.github.io/assets/css/citibike/EndCircle.html">ending</a>.</li>
 
-
-</ul>
 
 
 <h2 id="more-information">3. Finding</h2>
