--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -139,6 +139,11 @@ One of the challenges of visualizing rich data is the static scale of figures. F
   <iframe width="400" height="400" src="/assets/css/citibike/MapDiff.html"></iframe>
     <p><br /></p>
 
+    <li>This shows the trend of magic trips (The trips that have been done by the organization itself since no trip records were available for them). Color red indicates that the number of bikes left is greater than the number of bikes that have entered. Color green indicates that the number of bikes entered is greater than the number of bikes that have left.<a href="/assets/css/citibike/MagMap.html">[Demo link]</a> </li>
+
+     <p><br /></p>
+  <iframe width="400" height="400" src="/assets/css/citibike/MagMap.html"></iframe>
+    <p><br /></p>
 
 
 </ul>
