--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -136,7 +136,7 @@ One of the challenges of visualizing rich data is the static scale of figures. F
   <li>The trend of flow for each station, shows the number of bikes that entered and left that station, color red indicates that the number of bikes left is greater than the number of bikes that have entered. Color green indicates that the number of bikes entered is greater than the number of bikes that have left. <a href="/assets/css/citibike/MapDiff.html">[Demo link]</a>    
   </li>
     <p><br /></p>
-  <iframe width="400" height="400" src="/assets/css/citibike/MapDiff.html"></iframe>
+  <iframe width="300%" height="400" src="/assets/css/citibike/MapDiff.html"></iframe>
     <p><br /></p>
 
     <li>This shows the trend of magic trips (The trips that have been done by the organization itself since no trip records were available for them). Color red indicates that the number of bikes left is greater than the number of bikes that have entered. Color green indicates that the number of bikes entered is greater than the number of bikes that have left.<a href="/assets/css/citibike/MagMap.html">[Demo link]</a> </li>
