--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -170,6 +170,12 @@ Figure \ref{Graph4} presents bar graphs that show the cumulative number of bikes
 <h4 id="overview">3.5 Proposed Expansion Policy</h4>
 
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/citi_gif.mp4" width="80%" height="auto"  id="figure4" />
+    <div class="caption" >Figure 4</div>
+</div>
+
+
 
 
 <h2 id="overview">4. Conclusion</h2>
