--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -149,7 +149,21 @@ One of the challenges of visualizing rich data is the static scale of figures. F
 
 <h4 id="overview">3.1 Usage Trend</h4>
 
-Figure \ref{Graph4} presents bar graphs that show the cumulative number of bikes, stations, and monthly trips since June 2013. The data reveals a significant increase in the number of stations since 2013, while the number of bikes has remained relatively stable since December 2020. However, the number of trips per month has consistently increased each year despite variations in seasons and weather conditions, indicating a recurring pattern.
+In the past few years, the trend of using bikes has increased. In Figures 1, 2, and 3, you can see the monthly records of the number of bikes, the number of stations, and the number of trips recorded
+
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/citi_1.jpg" width="80%" height="auto"  id="figure4" />
+    <img src="/assets/img/citi_2.jpg" width="80%" height="auto"  id="figure4" />
+    <img src="/assets/img/citi_3.jpg" width="80%" height="auto"  id="figure4" />
+    <div class="caption" >Figure 4</div>
+</div>
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/citi_2.jpg" width="80%" height="auto"  id="figure4" />
+</div>
+
+
 
 
 <h4 id="overview">3.2 Stations’ Location Trends</h4>
