--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -185,8 +185,7 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/citi_gif.mp4" width="80%" height="auto"  id="figure4" />
-    <div class="caption" >Figure 4</div>
+  <source src="/assets/img/citi_gif.mp4" type="video/mp4">
 </div>
 
 
