--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -189,6 +189,10 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 </div>
 
 
+<video controls>
+  <source src="/assets/img/citi_gif.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
 
 <h2 id="overview">4. Conclusion</h2>
