--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -99,6 +99,11 @@ h3 {text-align: center;}
   <h1>Citi Bike Analysis</h1>
 
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/First.PNG" width="65%" height="auto"  id="figure8" />
+    <div class="caption" >Figure 1: My result from reproducing the <a href="https://arxiv.org/pdf/1312.4659.pdf">DeepPose</a></div>
+</div>
+
 
 
 <h2 id="more-information">1. Introduction</h2>
