--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -100,8 +100,8 @@ h3 {text-align: center;}
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/First.PNG" width="65%" height="auto"  id="figure8" />
-    <div class="caption" >Figure 1: My result from reproducing the <a href="https://arxiv.org/pdf/1312.4659.pdf">DeepPose</a></div>
+    <img src="/assets/img/First.PNG" width="100%" height="auto"  id="figure8" />
+    <!-- <div class="caption" >Figure 1: My result from reproducing the <a href="https://arxiv.org/pdf/1312.4659.pdf">DeepPose</a></div> -->
 </div>
 
 
