--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -97,6 +97,13 @@ table, th, td {
     
   <h1>Multi-Scale image segmentation</h1>
  
+
+ <div style="align: left; text-align:center;">
+    <img src="/assets/img/seg_page.PNG" width="65%" height="auto"  id="figure8" />
+    <!-- <div class="caption" >Figure 1: My result from reproducing the <a href="https://arxiv.org/pdf/1312.4659.pdf">DeepPose</a></div> -->
+</div>
+
+
   <p><br /></p>
 
   <h4>Disclaimer</h4>
