--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -98,10 +98,7 @@ table, th, td {
   <h1>Multi-Scale image segmentation</h1>
  
 
- <div style="align: left; text-align:center;">
-    <img src="/assets/img/seg_page.PNG" width="65%" height="auto"  id="figure8" />
-    <!-- <div class="caption" >Figure 1: My result from reproducing the <a href="https://arxiv.org/pdf/1312.4659.pdf">DeepPose</a></div> -->
-</div>
+
 
 
   <p><br /></p>
@@ -111,6 +108,10 @@ table, th, td {
 
 <p><br /></p>
 
+ <div style="align: left; text-align:center;">
+    <img src="/assets/img/seg_page.PNG" width="100%" height="auto"  id="figure8" />
+    <div class="caption" > My result from reproducing the <a href="https://arxiv.org/abs/2005.10821">DeepPose</a></div>
+</div>
 
 <h2 id="more-information">1. Introduction</h2>
 
