--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -97,7 +97,13 @@ table, th, td {
   <h1>Anomaly Detection with Auto-Encoders</h1>
  
 
+<p><br /></p>
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Cut_res.PNG" width="100%" height="auto"  id="figure8" />
+    <!-- <div class="caption" >Figure 1: My result from reproducing the <a href="https://arxiv.org/pdf/1312.4659.pdf">DeepPose</a></div> -->
+</div>
 
+<p><br /></p>
 
 <p> In data science, anomaly detection is when the system tries to detect a rare item, event or observation which deviates significantly from the original distribution and can not be defined as normal behaviour. Three different categories of anomaly detection exist:</p>
 
