--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -110,7 +110,7 @@ table, th, td {
 
  <div style="align: left; text-align:center;">
     <img src="/assets/img/seg_page.PNG" width="100%" height="auto"  id="figure8" />
-    <div class="caption" > My result from reproducing the <a href="https://arxiv.org/abs/2005.10821">DeepPose</a></div>
+    <div class="caption" > My result from reproducing the <a href="https://arxiv.org/abs/2005.10821">Hierarchical Multi-Scale Attention for Semantic Segmentation</a></div>
 </div>
 
 <h2 id="more-information">1. Introduction</h2>
