--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -190,12 +190,12 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 
 
 <div style="align: left; text-align:center;">
-  <source src="/assets/img/citi_gif.mp4" type="video/mp4">
+  <source width="auto" height="100%" src="/assets/img/citi_gif.mp4" type="video/mp4">
 </div>
 
 
 <video controls>
-  <source src="/assets/img/citi_gif.mp4" type="video/mp4">
+  <source width="auto" height="100%" src="/assets/img/citi_gif.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
