--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -165,7 +165,7 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 </div>
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/citi_2.jpg" width="80%" height="auto"  id="figure4" />
+    <img src="/assets/img/Picture2.PNG" width="80%" height="auto"  id="figure4" />
 </div>
 
 
@@ -179,7 +179,10 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 
 <h4 id="overview">3.3 Effect of Pandemic</h4>
 
-
+<div style="align: left; text-align:center;">
+  <source width="auto" height="100%" src="/assets/img/Picture1.png" type="video/mp4">
+  <div class="caption" >Figure 4</div>
+</div>
 
 <h4 id="overview">3.4 Commonly Used Locations</h4>
 
