--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -192,15 +192,18 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 <h4 id="overview">3.5 Proposed Expansion Policy</h4>
 
 
+https://youtu.be/-CDgf7y2biE
+
+
 <div style="align: left; text-align:center;">
   <source width="auto" height="100%" src="/assets/img/citi_gif.mp4" type="video/mp4">
 </div>
 
 
-<video controls>
+<!-- <video controls>
   <source width="auto" height="100%" src="/assets/img/citi_gif.mp4" type="video/mp4">
   Your browser does not support the video tag.
-</video>
+</video> -->
 
 
 <h2 id="overview">4. Conclusion</h2>
