--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -192,7 +192,11 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 <h4 id="overview">3.5 Proposed Expansion Policy</h4>
 
 
-https://youtu.be/-CDgf7y2biE
+<iframe width="420" height="315"
+src="https://youtu.be/-CDgf7y2biE">
+</iframe>
+
+
 
 
 <div style="align: left; text-align:center;">
