--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -154,7 +154,7 @@ One of the challenges of visualizing rich data is the static scale of figures. F
 
 <h4 id="overview">3.1 Usage Trend</h4>
 
-In the past few years, the trend of using bikes has increased. In Figures 1, 2, and 3, you can see the monthly records of the number of bikes, the number of stations, and the number of trips recorded
+In the past few years, the trend of using bikes has increased. In Figure 1 you can see the monthly records of the number of bikes, the number of stations, and the number of trips recorded
 
 
 <div style="align: left; text-align:center;">
@@ -181,7 +181,7 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 
 <div style="align: left; text-align:center;">
   <source width="auto" height="100%" src="/assets/img/Picture1.png" type="video/mp4">
-  <div class="caption" >Figure 4</div>
+  <div class="caption" >Figure 1</div>
 </div>
 
 <h4 id="overview">3.4 Commonly Used Locations</h4>
@@ -192,22 +192,17 @@ In the past few years, the trend of using bikes has increased. In Figures 1, 2, 
 <h4 id="overview">3.5 Proposed Expansion Policy</h4>
 
 
-<iframe width="420" height="315"
-src="https://youtu.be/-CDgf7y2biE">
+<iframe width="420" height="315" src="https://youtu.be/-CDgf7y2biE"> 
 </iframe>
 
 
+<object data="http://www.youtube.com/embed/-CDgf7y2biE"
+   width="560" height="315"></object>
 
 
-<div style="align: left; text-align:center;">
-  <source width="auto" height="100%" src="/assets/img/citi_gif.mp4" type="video/mp4">
-</div>
-
-
-<!-- <video controls>
-  <source width="auto" height="100%" src="/assets/img/citi_gif.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video> -->
+<video controls>
+  <source width="auto" height="400" src="/assets/img/citi_gif.mp4" type="video/mp4">
+</video>
 
 
 <h2 id="overview">4. Conclusion</h2>
