--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -158,14 +158,17 @@ In the past few years, the trend of using bikes has increased. In Figure 1 you c
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/citi_1.jpg" width="80%" height="auto"  id="figure4" />
-    <img src="/assets/img/citi_2.jpg" width="80%" height="auto"  id="figure4" />
-    <img src="/assets/img/citi_3.jpg" width="80%" height="auto"  id="figure4" />
-    <div class="caption" >Figure 4</div>
+    <img src="/assets/img/citi_1.jpg" width="80%" height="auto"  id="figure1" />
+    <img src="/assets/img/citi_2.jpg" width="80%" height="auto"  id="figure1" />
+    <img src="/assets/img/citi_3.jpg" width="80%" height="auto"  id="figure1" />
+    <div class="caption" >Figure 1</div>
 </div>
 
+
+On the left, <a href="#figure2">figure 2</a> shows the times of day when trips begin and end. It can be observed that there are peaks around working hours. On the right, we display a histogram of the trip durations. This makes sense because the policy charges extra if the bike is used for more than 30 minutes, requiring the bike to be re-registered for further use.
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Picture2.PNG" width="80%" height="auto"  id="figure4" />
+    <img src="/assets/img/Picture2.PNG" width="80%" height="auto"  id="figure2" />
+    <div class="caption" >Figure 2</div>
 </div>
 
 
