--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -195,7 +195,7 @@ On the left, <a href="#figure2">figure 2</a> shows the times of day when trips b
 <h4 id="overview">3.5 Proposed Expansion Policy</h4>
 
 
-<iframe width="420" height="315" src="https://youtu.be/-CDgf7y2biE"> 
+<iframe width="420" height="315" src="http://www.youtube.com/embed/-CDgf7y2biE"> 
 </iframe>
 
 
