--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -199,8 +199,8 @@ On the left, <a href="#figure2">figure 2</a> shows the times of day when trips b
 </iframe>
 
 
-<video controls>
-  <source width="auto" height="400" src="/assets/img/citi_gif.mp4" type="video/mp4">
+<video controls width="100%" height="auto">
+  <source  src="/assets/img/citi_gif.mp4" type="video/mp4">
 </video>
 
 
