--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -125,11 +125,7 @@ One of the challenges of visualizing rich data is the static scale of figures. F
 <ul>
   <li>The top 50 stations for <a href="/assets/css/citibike/StartCircle.html">starting</a> and <a href="/assets/css/citibike/EndCircle.html">ending</a>.</li>
 
-  <p><br /></p>
-  <iframe width="49%" height="400" src="/assets/css/citibike/StartCircle.html"></iframe>
-  <iframe width="49%" height="400" src="/assets/css/citibike/EndCircle.html"></iframe>
-
-  <p><br /></p>
+  
 
 
   <li>The trend of flow for each station, shows the number of bikes that entered and left that station, color red indicates that the number of bikes left is greater than the number of bikes that have entered. Color green indicates that the number of bikes entered is greater than the number of bikes that have left. <a href="/assets/css/citibike/MapDiff.html">[Demo link]</a>    
@@ -154,7 +150,7 @@ One of the challenges of visualizing rich data is the static scale of figures. F
 
 <h4 id="overview">3.1 Usage Trend</h4>
 
-In the past few years, the trend of using bikes has increased. In Figure 1 you can see the monthly records of the number of bikes, the number of stations, and the number of trips recorded
+In the past few years, the trend of using bikes has increased. In <a href="#figure1">figure 1</a> you can see the monthly records of the number of bikes, the number of stations, and the number of trips recorded
 
 
 <div style="align: left; text-align:center;">
@@ -189,7 +185,13 @@ On the left, <a href="#figure2">figure 2</a> shows the times of day when trips b
 
 <h4 id="overview">3.4 Commonly Used Locations</h4>
 
+In <a href="#figure3">figure 3</a>, maps are shown indicating the top 50 most frequently used starting and ending stations in 2021. As can be seen, all of them are located in Manhattan, although there are stations in other areas such as Queens, just to name a few. The information obtained from these maps has been used in the next subsection to demonstrate interesting discoveries.
 
+<p><br /></p>
+  <iframe width="49%" height="400" src="/assets/css/citibike/StartCircle.html"></iframe>
+  <iframe width="49%" height="400" src="/assets/css/citibike/EndCircle.html" id="figure3"></iframe>
+  <div class="caption" >Figure 3</div>
+  <p><br /></p>
 
 
 <h4 id="overview">3.5 Proposed Expansion Policy</h4>
