--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -190,7 +190,7 @@ In <a href="#figure3">figure 3</a>, maps are shown indicating the top 50 most fr
 <p><br /></p>
   <iframe width="49%" height="400" src="/assets/css/citibike/StartCircle.html"></iframe>
   <iframe width="49%" height="400" src="/assets/css/citibike/EndCircle.html" id="figure3"></iframe>
-  <div class="caption" >Figure 3</div>
+  <div class="caption" style="align: left; text-align:center;" >Figure 3</div>
   <p><br /></p>
 
 
