--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -170,6 +170,10 @@ On the left, <a href="#figure2">figure 2</a> shows the times of day when trips b
 
 <h4 id="overview">3.2 Stations’ Location Trends</h4>
 
+After analyzing the trend for allocating the bike stations using <a href="#figure3">figure 3</a> showing the location of the bike stations in 2013 and 2022, it turns out that, regardless of several potential aspects, e.g., the distribution of population and the age of people, the main factors to determine the coordinates of the stations are the Number of House Units and White-Collar Occupations. In this figure,there are two set of maps related to 2013 and 2022. from left to right, each set is representing the location of stations, location of the stations considering the house units, and location of stations by taking the White Collar Occupations into account, respectively. It is obvious that increasing the number of stations from Manhattan to the north and east is a solution to deal with the heavy traffic and rush hours in New York by encouraging people to use bikes instead of private cars and even other types of public transportation. Accordingly, it is reasonable that the number of bikes used on each day of the week is similar to the other weekdays as a large number of the trips have been devoted to commuting to work. 
+
+Another interesting point is that the number of new stations and the area they are covering is suddenly boosted in 2020 which is the year that the pandemic started (This fact can be confirmed by Phase 3 of the Major Citibike Expansion <a href="https://ride.citibikenyc.com/blog/major-citi-bike-expansion-map-revealed">[link]</a>. In this regard, it is safe to say that the pandemic was a fortune for the authorities to improve the infrastructures faster and increase the number of stations and cover more areas including Queens and a part of Bronx. 
+
 
   <p><br /></p>
   <iframe width="100%" height="400" src="/assets/css/citibike/MapDiff.html"></iframe>
@@ -181,19 +185,22 @@ On the left, <a href="#figure2">figure 2</a> shows the times of day when trips b
 
 <h4 id="overview">3.3 Effect of Pandemic</h4>
 
+From <a href="#figure4">figure 4</a>, which shows the number of trips per day from January 1st, 2019 to January 1st, 2021, it is clear that the general pattern in 2020 is almost the same as in 2019, except for a period of time between March 14th and April 30th, 2020, due to the increasing number of deaths caused by Covid-19. Additionally, another study published in June 2021 confirms the fact that the usage of Citibikes recovered very fast, even during the peaks of the pandemic, in comparison with other types of public transportation such as the subway (Wang 2021 [15]). The reason is not surprising, as during the pandemic, people preferred to commute alone for the sake of safety, rather than being on a bus with other people.
+
+
 <div style="align: left; text-align:center;">
   <source width="auto" height="100%" src="/assets/img/Picture1.png" type="video/mp4">
-  <div class="caption" >Figure 1</div>
+  <div class="caption" >Figure 4</div>
 </div>
 
 <h4 id="overview">3.4 Commonly Used Locations</h4>
 
-In <a href="#figure3">figure 3</a>, maps are shown indicating the top 50 most frequently used starting and ending stations in 2021. As can be seen, all of them are located in Manhattan, although there are stations in other areas such as Queens, just to name a few. The information obtained from these maps has been used in the next subsection to demonstrate interesting discoveries.
+In <a href="#figure5">figure 5</a>, maps are shown indicating the top 50 most frequently used starting and ending stations in 2021. As can be seen, all of them are located in Manhattan, although there are stations in other areas such as Queens, just to name a few. The information obtained from these maps has been used in the next subsection to demonstrate interesting discoveries.
 
 <p><br /></p>
   <iframe width="49%" height="400" src="/assets/css/citibike/StartCircle.html"></iframe>
-  <iframe width="49%" height="400" src="/assets/css/citibike/EndCircle.html" id="figure3"></iframe>
-  <div class="caption" style="align: left; text-align:center;" >Figure 4</div>
+  <iframe width="49%" height="400" src="/assets/css/citibike/EndCircle.html" id="figure5"></iframe>
+  <div class="caption" style="align: left; text-align:center;" >Figure 5</div>
   <p><br /></p>
 
 
