--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -176,7 +176,7 @@ Another interesting point is that the number of new stations and the area they a
 
 
   <p><br /></p>
-  <iframe width="100%" height="400" src="/assets/css/citibike/MapDiff.html"></iframe>
+  <iframe width="100%" height="400" src="/assets/css/citibike/MapDiff.html" id="figure3"></iframe>
   <div class="caption" style="align: left; text-align:center;" >Figure 3</div>
     <p><br /></p>
 
@@ -189,7 +189,7 @@ From <a href="#figure4">figure 4</a>, which shows the number of trips per day fr
 
 
 <div style="align: left; text-align:center;">
-  <source width="auto" height="100%" src="/assets/img/Picture1.png" type="video/mp4">
+  <source width="auto" height="100%" src="/assets/img/Picture1.png" type="video/mp4" id="figure4">
   <div class="caption" >Figure 4</div>
 </div>
 
