--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -189,7 +189,7 @@ From <a href="#figure4">figure 4</a>, which shows the number of trips per day fr
 
 
 <div style="align: left; text-align:center;">
-  <source width="auto" height="100%" src="/assets/img/Picture1.png" type="video/mp4" id="figure4">
+  <source width="auto" height="100%" src="/assets/img/Picture1.png" id="figure4">
   <div class="caption" >Figure 4</div>
 </div>
 
