--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -188,10 +188,12 @@ Another interesting point is that the number of new stations and the area they a
 From <a href="#figure4">figure 4</a>, which shows the number of trips per day from January 1st, 2019 to January 1st, 2021, it is clear that the general pattern in 2020 is almost the same as in 2019, except for a period of time between March 14th and April 30th, 2020, due to the increasing number of deaths caused by Covid-19. Additionally, another study published in June 2021 confirms the fact that the usage of Citibikes recovered very fast, even during the peaks of the pandemic, in comparison with other types of public transportation such as the subway (Wang 2021 [15]). The reason is not surprising, as during the pandemic, people preferred to commute alone for the sake of safety, rather than being on a bus with other people.
 
 
+
 <div style="align: left; text-align:center;">
-  <source width="auto" height="100%" src="/assets/img/Picture1.png" id="figure4">
-  <div class="caption" >Figure 4</div>
+    <img src="/assets/img/Picture1.png" width="80%" height="auto"  id="figure4" />
+    <div class="caption" >Figure 4</div>
 </div>
+
 
 <h4 id="overview">3.4 Commonly Used Locations</h4>
 
