--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -209,6 +209,7 @@ In <a href="#figure5">figure 5</a>, maps are shown indicating the top 50 most fr
 <h4 id="overview">3.5 Proposed Expansion Policy</h4>
 
 
+ The expansion of bike stations was from Manhattan to the north and east to cover more areas. However, in this section, a visualization analysis for expanding bike stations to support the most used stations is proposed. By putting Figure <a href="#figure5">figure 5</a> into a heat map illustrating the density of stations in different areas of New York and zooming in, it can be seen that a number of commonly used stations are located in areas where there are not enough stations. In this regard, these areas have the potential to have more stations and, as a result, more bikes (see <a href="/assets/css/citibike/StartHeat.html">[Demo]</a>).
 
 <video controls width="100%" height="auto">
   <source  src="/assets/img/citi_gif.mp4" type="video/mp4">
