--- a/projects/index.html
+++ b/projects/index.html
@@ -100,6 +100,8 @@
   <h6>some of the projects I have worked on</h6>
   -->
 
+<h1>Deep Learning</h1>
+
 <div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
   
     <div class="project-card">  <!-- Citi Bike Project Page -->
