--- a/projects/index.html
+++ b/projects/index.html
@@ -192,7 +192,7 @@
 
 
 
-<h2>Data Analysis and Visualization</h2>
+<h2 class="card-title">Data Analysis and Visualization</h2>
 
 <div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
   
