--- a/projects/index.html
+++ b/projects/index.html
@@ -95,12 +95,13 @@
   <!-- Content -->
   <div class="content">
     
-  <h1>Projects</h1>
+  <!-- <h1>Projects</h1> -->
   <!--
   <h6>some of the projects I have worked on</h6>
   -->
 
-<h2>Deep Learning</h2>
+
+<h3 class="mt-4"><nobr><em>Deep Learning</nobr></h3>
 
 <div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
   
