--- a/projects/index.html
+++ b/projects/index.html
@@ -193,7 +193,9 @@
 
 
 
-<h2 class="card-title">Data Analysis and Visualization</h2>
+<!-- <h2 class="card-title"></h2> -->
+
+<h3 class="mt-4"><nobr><em>Data Analysis and Visualization</nobr></h3>
 
 <div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
   
