--- a/projects/index.html
+++ b/projects/index.html
@@ -101,7 +101,7 @@
   -->
 
 
-<h3 class="mt-4"><nobr><em>Deep Learning</nobr></h3>
+<h3 class="mt-4"><nobr><em>Deep Learning / Computer Vision</nobr></h3>
 
 <div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
   
