--- a/index.html
+++ b/index.html
@@ -191,6 +191,32 @@
       </div>
     </div>
   
+
+      <div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Sep 10, 2020
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>I have recently been promoted from the position of intern to that of research assistant at <a href="https://hara.ai/" target="_blank">HARA AI</a>.
+</p>
+      </div>
+    </div>
+
+
+
+        <div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Jun 15, 2019
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>I started a new role as an intern at <a href="https://hara.ai/" target="_blank">HARA AI</a>.
+</p>
+      </div>
+    </div>
   
   <!--  <div class="row p-0">
       <div class="col-sm-2 p-0">
