--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I have recently been promoted from the position of intern to that of research assistant at <a href="https://hara.ai/" target="_blank">HARA AI</a>.
+        <p>I have recently been promoted from the position of intern to that of research assistant at HARA AI <a href="https://hara.ai/" target="_blank">[Original page]</a> <a href="https://hara-ai.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp&_x_tr_hist=true" target="_blank">[Translated page]</a>.
 </p>
       </div>
     </div>
@@ -213,7 +213,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I started a new role as an intern at <a href="https://hara.ai/" target="_blank">HARA AI</a>.
+        <p>I started a new role as a machine learning intern at HARA AI<a href="https://hara.ai/" target="_blank">[Original page]</a> <a href="https://hara-ai.translate.goog/?_x_tr_sl=auto&_x_tr_tl=en&_x_tr_hl=en&_x_tr_pto=wapp&_x_tr_hist=true" target="_blank">[Translated page]</a>.
 </p>
       </div>
     </div>
