added CVIL lab to the pages

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I joined <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a> as a Research Assistant.
+        <p>I joined <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a> / <a href="https://cvil.eecs.yorku.ca/" target="_blank">Computational Vision and Imaging Lab</a> as a Research Assistant.
 </p>
       </div>
     </div>
