--- a/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
+++ b/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html
@@ -99,7 +99,7 @@ table, th, td {
 
 <p><br /></p>
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Cut_res.PNG" width="100%" height="auto"  id="figure8" />
+    <img src="/assets/img/Cut_res.JPG" width="100%" height="auto"  id="figure8" />
     <!-- <div class="caption" >Figure 1: My result from reproducing the <a href="https://arxiv.org/pdf/1312.4659.pdf">DeepPose</a></div> -->
 </div>
 
