--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -239,6 +239,15 @@ In conclusion, we can say that there is indeed a wealth of information within th
 </ul>
 
 
+<h2 id="more-information">More infomation</h2>
+
+<ul>
+  <li>Code: <a href="https://github.com/SajjadPSavoji/CitiBikeNYC">link</a> </li>
+  <li>Report: <a href="/assets/pdf/Projects-Reports/Projects-Reports.pdf">link</a> </li>
+  <li>Dataset: <a href="https://ride.citibikenyc.com/system-data">link</a> </li>
+</ul>
+
+
 
   </div>
 
