fix: renamed the folder

--- a/talks/index.html
+++ b/talks/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Amin Fadaeinejad | projects</title>
+  <title>Amin Fadaeinejad | talks</title>
   <meta name="description" content="This is the personal website of Amin Fadaeinejad">
 
   <!-- Fonts and Icons -->
@@ -68,8 +68,8 @@
               </li>
             
             <li class="nav-item ">
-                  <a class="nav-link" href="/talk/">
-                    talk
+                  <a class="nav-link" href="/talks/">
+                    Talks
                     
                   </a>
               </li>
