--- a/teaching/index.html
+++ b/teaching/index.html
@@ -66,8 +66,8 @@
               </li>
             
             <li class="nav-item ">
-                  <a class="nav-link" href="/talk/">
-                    talk
+                  <a class="nav-link" href="/Talk/">
+                    Talks
                     
                   </a>
               </li>
