--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
               </li>
             
               <li class="nav-item ">
-                  <a class="nav-link" href="/talk/">
-                    talk
+                  <a class="nav-link" href="/talks/">
+                    Talks
                     
                   </a>
               </li>
