--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -70,8 +70,8 @@ h3 {text-align: center;}
               </li>
             
           <li class="nav-item ">
-                  <a class="nav-link" href="/talk/">
-                    talk
+                  <a class="nav-link" href="/talks/">
+                    Talks
                     
                   </a>
               </li>
