--- a/publications/index.html
+++ b/publications/index.html
@@ -68,8 +68,8 @@
               </li>
             
           <li class="nav-item ">
-                  <a class="nav-link" href="/talk/">
-                    talk
+                  <a class="nav-link" href="/talks/">
+                    Talks
                     
                   </a>
               </li>
