--- a/talks/index.html
+++ b/talks/index.html
@@ -106,9 +106,9 @@
   -->
 
 
-<h3 class="mt-4"><nobr><em>Deep Learning / Computer Vision</nobr></h3>
+<h3 class="mt-4"><nobr><em>Paper Presentation</nobr></h3>
 
-<div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
+<div id="projects" class="row mt-2 pt-4" style="overflow: visible !important;">
   
 
 
@@ -202,7 +202,7 @@
 
 <h3 class="mt-4"><nobr><em>Data Analysis and Visualization</nobr></h3>
 
-<div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
+<div id="projects" class="row mt-2 pt-1" style="overflow: visible !important;">
   
     <div class="project-card">  <!-- Citi Bike Project Page -->
       
