--- a/talks/index.html
+++ b/talks/index.html
@@ -120,13 +120,13 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" height="220px"/>
           <div class="card-body">
-            <h5 class="card-title">Unpaired Image-to-Image Translation</h5>
+            <h5 class="card-title">One-Shot Free-View Neural Talking-Head Synthesis for Video Conferencing</h5>
             <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2011.15126" target="_blank">Paper</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data </a>
               <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/CycleGAN-Report.pdf" target="_blank">Report</a>
-              <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank">Video</a>
+              <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/3UbgeBpWgZM" target="_blank">Video</a>
 
             </div>
           </div>
@@ -144,8 +144,8 @@
             <h5 class="card-title">Multi-Scale image segmentation</h5>
             <p class="card-text">Image segmentation using mutli-scale attention model.(paper reproduction)</p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/Final%20Project" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2003.08934" target="_blank">Paper</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://youtu.be/oKKeae_Sc-I" target="_blank">Video</a>
             </div>
           </div>
         </div>
