--- a/teaching/index.html
+++ b/teaching/index.html
@@ -66,7 +66,7 @@
               </li>
             
             <li class="nav-item ">
-                  <a class="nav-link" href="/Talk/">
+                  <a class="nav-link" href="/talks/">
                     Talks
                     
                   </a>
