--- a/talks/index.html
+++ b/talks/index.html
@@ -108,7 +108,7 @@
 
 <h3 class="mt-4"><nobr><em>Paper Presentation</nobr></h3>
 
-<div id="projects" class="row mt-2 pt-4" style="overflow: visible !important;">
+<div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
   
 
 
@@ -118,7 +118,7 @@
         <a href="/projects/Self-Projects/CycleGAN/index.html">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" height="220px"/>
+          <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" width="100%"/>
           <div class="card-body">
             <h5 class="card-title">One-Shot Free-View Neural Talking-Head Synthesis for Video Conferencing</h5>
             <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p>
