--- a/talks/index.html
+++ b/talks/index.html
@@ -124,7 +124,7 @@
             <!-- <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p> -->
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2011.15126" target="_blank">Paper</a>
-              <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/3UbgeBpWgZM" target="_blank">Video</a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/3UbgeBpWgZM" target="_blank">Video</a>
 
             </div>
           </div>
@@ -143,7 +143,7 @@
             <!-- <p class="card-text">Image segmentation using mutli-scale attention model.(paper reproduction)</p> -->
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2003.08934" target="_blank">Paper</a>
-              <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/oKKeae_Sc-I" target="_blank">Video</a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/oKKeae_Sc-I" target="_blank">Video</a>
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
             <!-- <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p> -->
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/1703.10593" target="_blank">Paper</a>
-              <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank">Video</a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank">Video</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="/projects/Self-Projects/CycleGAN/index.html" target="_blank">My implementation</a>
             </div>
           </div>
