--- a/talks/index.html
+++ b/talks/index.html
@@ -118,7 +118,7 @@
         <a href="https://youtu.be/3UbgeBpWgZM">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" width="400px"/>
+          <img class="card-img-top" src="/assets/img/Video Conferencing Presentation.PNG" alt="project thumbnail"/>
           <div class="card-body">
             <h5 class="card-title">One-Shot Free-View Neural Talking-Head Synthesis for Video Conferencing</h5>
             <!-- <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p> -->
