--- a/talks/index.html
+++ b/talks/index.html
@@ -137,7 +137,7 @@
         <a href="https://youtu.be/oKKeae_Sc-I">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/Segment.JPG" alt="project thumbnail" height="500px"/>
+          <img class="card-img-top" src="https://youtu.be/oKKeae_Sc-I" alt="project thumbnail" height="500px"/>
           <div class="card-body">
             <h5 class="card-title">Multi-Scale image segmentation</h5>
             <!-- <p class="card-text">Image segmentation using mutli-scale attention model.(paper reproduction)</p> -->
