--- a/talks/index.html
+++ b/talks/index.html
@@ -139,7 +139,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/NeRF.PNG" alt="project thumbnail" height="500px"/>
           <div class="card-body">
-            <h5 class="card-title">NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis</h5>
+            <h5 class="card-title text-lowercase">NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis</h5>
             <!-- <p class="card-text">Image segmentation using mutli-scale attention model.(paper reproduction)</p> -->
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2003.08934" target="_blank">Paper</a>
