--- a/talks/index.html
+++ b/talks/index.html
@@ -137,7 +137,7 @@
         <a href="https://youtu.be/oKKeae_Sc-I">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/NeRF.PNG" alt="project thumbnail" height="500px"/>
+          <img class="card-img-top" src="/assets/img/NeRF.PNG" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title text-lowercase">NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis</h5>
             <!-- <p class="card-text">Image segmentation using mutli-scale attention model.(paper reproduction)</p> -->
@@ -155,7 +155,7 @@
         <a href="https://youtu.be/wXQPglO9ZTo">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/CyclePres.PNG" alt="project thumbnail" height="600px"/>
+          <img class="card-img-top" src="/assets/img/CyclePres.PNG" alt="project thumbnail"/>
           <div class="card-body">
             <h5 class="card-title">Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks</h5>
             <!-- <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p> -->
