--- a/teaching/index.html
+++ b/teaching/index.html
@@ -109,7 +109,7 @@
   <div class="p-3">
     <div class="row">
       <div class="col-sm-10">
-        <h5 class="font-weight-bold">Mission-Critical Systems</h5>
+        <h5 class="font-weight-bold"><span style="font-style: normal;">Mission-Critical Systems</span></h5>
       </div>
       <div class="col-sm-2 text-left text-sm-right">
         
@@ -125,7 +125,7 @@
   <div class="p-3">
     <div class="row">
       <div class="col-sm-10">
-        <h5 class="font-weight-bold">Data Structure </h5>
+        <h5 class="font-weight-bold" style="font-style: normal">Data Structure </h5>
       </div>
       <div class="col-sm-2 text-left text-sm-right">
       
